Improved landing page styles: background color applied to a button wrapper for sign in and login buttons; Increased button size with application of button-xl custom class; Removal of hr elements.

--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -1,8 +1,10 @@
-/*Navbar*/
-
 .nav-link {
     font-size: 125%;
     color: rgba(50, 150, 180, 1.0) !important;
+}
+
+.bg-grey {
+    background-color: #f8f9fa;
 }
 
 .hr-light {
