--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -7,6 +7,12 @@
     background-color: #f8f9fa;
 }
 
+.form-xl {
+    height: calc(1.75em + 1.5rem + 4px);
+    font-size: 150%;
+    font-weight: 200;
+}
+
 .hr-light {
     border: 0;
     height: 1px;
