--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -1,3 +1,12 @@
+.landing-wrapper {
+    background-image: url("../assets/images/books.jpeg");
+    background-size: cover;
+}
+
+.dark-overlay {
+    background-color: rgba(245,249,255,0.9);
+}
+
 .nav-link {
     font-size: 125%;
     color: rgba(50, 150, 180, 1.0) !important;
